# mublog

./: .cookiecutter.yaml  .gitignore  .gitignore.sed  .mailmap  .pre-commit-config.yaml  .prettierrc.toml  .tool-versions  CONTRIBUTING.md  DONE.md  TODO.md  justfile  main.py  mise.toml  mkdocs.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  test_repository_layout.py
.biobuddies/: autoformat-excludes  ruff.toml  typos.toml
.config/: autoformat-excludes  mise.toml  typos.toml
.github/workflows/: act.yaml
deploys/mublog/: terraform.py
deploys/mublog/terraform/: .terraform.lock.hcl  __init__.py  main.py  worker.js
docs/: index.md
docs/assets/: trihard.css  trihard.js
docs/blog/: index.md
docs/blog/posts/: 2023-02-19-crepe-recipe.md  2026-02-01-he-must-increase.md  2026-02-15-numbers-2-order-of-the-camps.md  2026-02-16-numbers-3-camp-positions.md  2026-02-22-wide-key-equals-value-logging.md  2026-03-14-trihard.md  2026-03-29-fretboard-diagrams.md  2026-04-03-christ-the-lord-is-risen-today.md  2026-04-04-favorite-mountain-singalongs.md  2026-04-13-unicode-staff-grid.md  2026-04-28-gh-https-auth.md  2026-04-29-globalized-datetimes.md  2026-04-29-globalized-datetimez.md  2026-05-18-muve-over-micro.md
docs/javascripts/: trihard.js
helichopyter/: __init__.py  __main__.py
scripts/: chord_repro.html  screenshot_chord_repro.py  transpose_easter_hymn_to_g.py
