[project]
name = 'mublog'
dynamic = ['version']

[project.optional-dependencies]
dev = [
    'actionlint-py',
    'cdktf',
    'cdktf-cdktf-provider-cloudflare',
    'cookiecutter',
    'hadolint-py @ git+https://github.com/AleksaC/hadolint-py.git',
    'helicopyter',
    'mkdocs-material',
    'pre-commit',
    'pre-commit-hooks',
    'ruff',
    'rust-just',
    'shellcheck-py',
    'typos',
    'validate-pyproject',
    'yamllint',
]

[tool.basedpyright]
extends = '.biobuddies/basedpyright.toml'
reportAny = false
reportExplicitAny = false                 # Incremental typing is good.
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
venv = '.venv'
venvPath = '.'

[tool.ruff]
extend = '.biobuddies/ruff.toml'
line-length = 100
