[project]
name = 'mublog'
dynamic = ['version']

[project.optional-dependencies]
dev = [
    'actionlint-py',
    'cdktf',
    'cdktf-cdktf-provider-cloudflare',
    'cookiecutter',
    'django-upgrade',
    'djlint',
    'hadolint-py @ git+https://github.com/AleksaC/hadolint-py.git',
    'helicopyter',
    'mkdocs-material',
    'mkdocs-macros-plugin',
    'playwright',
    'pre-commit',
    'pre-commit-hooks',
    'pyrefly',
    'pytest',
    'pytest-cov',
    'ruff',
    'shellcheck-py',
    'shfmt-py',
    'typos',
    'validate-pyproject[all]',
    'yamllint',
]

[tool.pyrefly]
python-version = '3.13'

[tool.ruff]
extend = '.biobuddies/ruff.toml'
line-length = 100
